--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "mm"
+name = "matrix_multiply_test"
 version = "0.1.0"
 authors = ["Emanuel Lima <emanuel-lima@outlook.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ndarray-rand = "0.11.0"
