--- a/Benchmarks/heap_ndarray_nolib/Cargo.toml
+++ b/Benchmarks/heap_ndarray_nolib/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Emanuel Lima <emanuel-lima@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-ndarray-rand = "0.11.0"
-ndarray = "0.13.0"
+ndarray-rand = "0.12.0"
+ndarray = "0.14.0"
+rand = "0.7.3"
