More fixes on benchmarks and julia scripts

--- a/Benchmarks/heap_vec_nolib/Cargo.toml
+++ b/Benchmarks/heap_vec_nolib/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "matrix-multiply-raw"
+name = "matrix_multiply_test"
 version = "0.1.0"
 authors = ["Emanuel Lima <emanuel-lima@outlook.com>"]
 edition = "2018"
 
 [dependencies]
 rand = "0.7.3"
-
